tests/ci/expected/0039-struct_imcomplete.error.c.expected
ci/0039-struct_imcomplete.error.c:4:12: error: undefined behaviour: identifier with no linkage and incomplete type
  struct T s; // here "struct T" is an incomplete type
           ^
ยง6.7#7: 
7   If an identifier for an object is declared with no linkage, the type for the object shall be
    complete by the end of its declarator, or by the end of its init-declarator if it has an
    initializer; in the case of function parameters (including in prototypes), it is the adjusted
    type (see 6.7.6.3) that is required to be complete.
    Forward references: declarators (6.7.6), enumeration specifiers (6.7.2.2), initialization
    (6.7.9), type names (6.7.7), type qualifiers (6.7.3).
